# TC_FragileMirrors

./: .gitignore  CMakeLists.txt  README.md  README_legacy.md
StateOfArt/: FragileMirrors.java
app/: bs.cpp  bs_balanced.cpp  bs_best_width.cpp  bs_new.cpp  main.cpp  main_template.cpp  solver.cpp  tester.cpp
app/legacy/: CMakeLists.txt  bs.cpp  bs_balanced.cpp  bs_best_width.cpp  bs_new.cpp  main_not_used.cpp  solver.cpp  tester.cpp
app/measure/: CMakeLists.txt  bs_restore_i3.cpp  solver_1.cpp  solver_2.cpp
app/solver/: CMakeLists.txt  bs_greedy_i1.cpp  bs_restore_i1.cpp  bs_restore_i3.cpp  bs_restore_i4.cpp  bs_restore_i5.cpp  bs_restore_i6.cpp  bs_restore_i7.cpp  bs_restore_i8.cpp  bs_score_i1.cpp  bs_score_i2.cpp  greedy_i1.cpp  main_template.cpp  solver_1.cpp  solver_2.cpp  solver_3.cpp
benchmark/: board.cpp  main.cpp
data/: bs_best_width.csv  empty_lines_stats.txt  topcoder_run.txt
data/board/: 2.txt  2_letter.txt  3.txt  51_letter.txt
data/test/: board_sample.txt
docs/: abbreviations.md  approach.md  approach.txt  coding_style_guide.md  others_approach.md  profile.md
docs/progress/: beam_width.md  bs_performance.md  empty_lines.md  performance.md
include/: FragileMirrors.h  FragileMirrors.hpp  GridBoard.h  ant.hpp  beam_search.hpp  beam_search_new.hpp  beam_search_v4.hpp  best_first_search.hpp  board.h  board.hpp  board_common.hpp  board_test.hpp  board_v1.hpp  board_v1_impl_1.hpp  board_v2.hpp  board_v2_impl_1.hpp  board_v3.hpp  board_v4.hpp  board_v5.hpp  board_v6.hpp  bs_balanced.hpp  bs_new.hpp  cast_history.hpp  chokudai.h  chokudai.hpp  dfs.hpp  eldidou.h  fragile_mirrors.hpp  greedy.hpp  naive_search.hpp  nested_monte_carlo_search.hpp  optimizer.hpp  score.hpp  solver.h  solver.hpp  stats.hpp  util.hpp
include/board/: board_i1.hpp  board_i1_util.hpp  board_i2.hpp
include/common/: grid.hpp  origin_grid.hpp  position.hpp  solver_util.hpp  timer.hpp  types.hpp  zobrist_hashing.hpp
include/legacy/: beam_search.hpp  beam_search_history.hpp  board_hash.hpp  board_v1_impl_1.hpp  board_v2_impl_1.hpp  cast_history.hpp  derivative.hpp  discovery.hpp  score_.hpp  solver.hpp  util.hpp
include/mirrors/board/: board_hash.hpp  board_i1.hpp  board_i1_util.hpp  board_i2.hpp  board_i3.hpp  board_i4.hpp  board_i5.hpp  board_i5_cast.hpp  board_i5_restore_cast.hpp  board_n_i1.hpp  board_n_i1_util.hpp  board_n_i2.hpp  board_n_i2_params.hpp  board_n_i3.hpp  board_n_i4.hpp  board_n_i4_params.hpp  board_n_i5.hpp  board_n_i5_params.hpp  board_r1.hpp  board_r1_util.hpp  board_r2.hpp  board_r3.hpp  board_r4.hpp  board_r5.hpp  board_r6.hpp  board_r6_util.hpp  board_r7.hpp  cast_i1.hpp
include/mirrors/common/: cast_node.hpp  grid.hpp  origin_grid.hpp  position.hpp  rng.hpp  solver_util.hpp  types.hpp  zobrist_hashing.hpp
include/mirrors/measure/: bs_restore_i3.hpp  solver_2.hpp  solver_3.hpp
include/mirrors/param/: beam_width.hpp  empty_lines_param.hpp
include/mirrors/score/: greater.hpp  less.hpp  score_c_i1.hpp  score_c_i2.hpp  score_i1.hpp  score_i10.hpp  score_i11.hpp  score_i2.hpp  score_i3.hpp  score_i4.hpp  score_i5.hpp  score_i6.hpp  score_i7.hpp  score_i8.hpp  score_i9.hpp  score_psyho.hpp  score_psyho2.hpp
include/mirrors/solver/: bs_greedy_i1.hpp  bs_greedy_i2.hpp  bs_restore_i1.hpp  bs_restore_i2.hpp  bs_restore_i3.hpp  bs_restore_i4.hpp  bs_restore_i5.hpp  bs_restore_i6.hpp  bs_restore_i7.hpp  bs_restore_i7_beam_width.hpp  bs_score_i1.hpp  bs_score_i2.hpp  greedy_i1.hpp  solver_1.hpp  solver_2.hpp  solver_3.hpp  solver_4.hpp  solver_5.hpp
include/solver/: bs_greedy_i1.hpp  greedy_i1.hpp
others/: FragileMirrors.java  chokudai.cpp  colun.cpp  eldidou.cpp  psyho.cpp
pymirrors/: __init__.py
pymirrors/db/: __init__.py  base.py
scores/: beam_search_new.txt  chokudai.txt  colun.txt  eldidou.txt  psyho.txt  solver.txt  version_v1.txt
scripts/: MostEfficientCast.txt  MostEfficientLocalThreeStepCast.txt  MostEfficientLocalThreeStepCast2.txt  MostEfficientTwoStepCast.txt  beam_width.py  bs_best_width.py  bs_stats.py  empty_lines_param.py  even_lines_param_unfinished.py  gen_board.py  globalOneBestTwoStepCast.txt  graph.py  outFixedWidth.txt  outGraph.txt  outMostEfficientTwoStepCast1.txt  outTestSolutions.txt  outTestSolutions1.txt  output.txt  rank.py  run_exec.py  run_fragile_mirrors.py  run_test.py  run_visualizer.sh  score.py  score_graph.py  tests.txt  todo.txt
src/: FragileMirrors.cpp  GridBoard.cpp  board.cpp  board_test.cpp  board_v1.cpp  board_v2.cpp  board_v3.cpp  board_v4.cpp  cast_history.cpp  chokudai.cpp  eldidou.cpp  main.cpp  score.cpp  solver.cpp  stats.cpp  util.cpp
src/legacy/: board_v5.cpp  cast_history.cpp  score.cpp  score_.cpp  stats.cpp  util.cpp
src/mirrors/board/: board_n_i2.cpp  board_n_i4.cpp  board_n_i5.cpp  board_r.cpp  cast_i1.cpp
src/mirrors/common/: rng.cpp
submit/: version_v1.cpp  version_v2.cpp
test/: Test.1  board.cpp  main.cpp
